[package]
name = "unipept-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.1", features = ["derive"] }
