[package]
name = "unipept-api"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.4", features = ["macros", "form", "multipart"] }
clap = { version = "4.5.1", features = ["derive"] }
database = { path = "../database" }
datastore = { path = "../datastore" }
index = { path = "../index" }
paste = "1.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_qs = "0.13.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
urlencoding = "2.1.3"
