[package]
name = "unipept-api"
version = "2.3.2"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.4", features = ["macros", "form", "multipart"] }
clap = { version = "4.5.1", features = ["derive"] }
database = { path = "../database" }
datastore = { path = "../datastore" }
http-body-util = "0.1.2"
index = { path = "../index" }
paste = "1.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_qs = "0.13.0"
thiserror = "1.0"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "limit", "normalize-path"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
http = "1.1.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
itertools = "0.13.0"
reqwest = { version = "0.12.8", features = [ "json" ] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"

[[bench]]
opt-level = 0
name = "bench_main"
harness = false

[profile.bench]
opt-level=3
debug = true
