[package]
name = "index"
version = "2.3.2"
edition = "2021"

[dependencies]
sa-compression = { git = "https://github.com/unipept/unipept-index.git", branch = "feature/improve-peak-memory" }
sa-index = { git = "https://github.com/unipept/unipept-index.git", branch = "feature/improve-peak-memory" }
sa-mappings = { git = "https://github.com/unipept/unipept-index.git", branch = "feature/improve-peak-memory" }
thiserror = "1.0"
